--- a/views/finance.pug
+++ b/views/finance.pug
@@ -13,69 +13,86 @@
         )
 
       .input-group
-        span#finance-1-sp.input-group-text.col-sm-8 How satisfied you with your income? (Score 1-10)
+        span#finance-1-sp.input-group-text.col-sm-8 How satisfied you are with your income?
         input#finance-1.form-control(
           aria-describedby="finance-1" 
-          type="text"
+          type="number"
+          min="0"
+          max="10"
+          name="finance1"
+          placeholder="Score 1 - 10" 
         )
         .input-group
-        //- rephrase
-        span#finance-2-sp.input-group-text.col-sm-8 How much do you earn? (Monthly average)
+        span#finance-2-sp.input-group-text.col-sm-8 How much do you earn?
         input#finance-2.form-control(
           aria-describedby="finance-2" 
           type="text"
+          maxlength=35
+          placeholder="Monthly average"
         )
         .input-group
-        //- rephrase
-        span#finance-3-sp.input-group-text.col-sm-8 How much do you spend? (Monthly average)
+        span#finance-3-sp.input-group-text.col-sm-8 How much do you spend?
         input#finance-3.form-control(
           aria-describedby="finance-3" 
           type="text"
+          maxlength=35
+          name="finance3"
+          placeholder="Monthly average"
         )
 
         .input-group
-        //- rephrase
         span#finance-4-sp.input-group-text.col-sm-8 What percent of your spendings is intended for paying debts? 
         input#finance-4.form-control(
           aria-describedby="finance-4" 
-          type="text"
+          type="number"
+          min="0"
+          max="100" 
+          name="finance4"  
+          placeholder="1-100%"       
         )
         .input-group
-        //- rephrase
-        span#finance-5-sp.input-group-text.col-sm-8 What is the percent of passive incomes? (1-100%)
+        span#finance-5-sp.input-group-text.col-sm-8 What is the percent of passive incomes?
         input#finance-5.form-control(
           aria-describedby="finance-5" 
-          type="text"
-          placeholder=""
+          type="number"
+          min="0"
+          max="100" 
+          name="finance5"   
+          placeholder="1-100%"
         )
 
         .input-group
-        //- rephrase
-        span#finance-6-sp.input-group-text.col-sm-8 How much of your basic needs you can cover with your earnings ? (1-100%)
+        span#finance-6-sp.input-group-text.col-sm-8 Percentage of your basic needs you are able to cover with your earnings ?
         input#finance-6.form-control(
           aria-describedby="finance-6" 
-          type="text"
+          type="number"
+          min="0"
+          max="100" 
+          name="finance6"   
           placeholder="Basic needs are: food, place of living, clothes, nothing fancy"
         )
 
         .input-group
-        //- rephrase
-        span#finance-7-sp.input-group-text.col-sm-8 How much of your other needs and lusts you can cover with your earnings ? (1-100%)
+        span#finance-7-sp.input-group-text.col-sm-8 How much of your other needs and lusts you can cover with your earnings ?
         input#finance-7.form-control(
           aria-describedby="finance-7" 
-          type="text"
+          type="number"
+          min="0"
+          max="100" 
+          name="finance7"
+          placeholder="1-100%"
         )
 
         .input-group
         span#finance-8-sp.input-group-text.col-sm-2 Note
-        input#finance-8.form-control(
+        textarea#finance-8.form-control(
           aria-describedby="finance-8" 
-          placeholder="TODO, Current state of things (where do you live (house, rented, etc, what type of vacation/relax/rest can you allow yourself? assess your financial state etc)"
-          type="text"
+          cols="33" 
+          rows="5" 
+          name="finance8"
+          maxlength=1100
+          placeholder="Current state of things (where do you live (house, rented, etc, what type of vacation/relax/rest can you allow yourself? assess your financial state etc)"
         )
 
-
-//- TODO add placeholders
-//- TODO rephrase all questions
 //- TODO: add required 
 
