--- a/views/finance.pug
+++ b/views/finance.pug
@@ -28,6 +28,7 @@
           aria-describedby="finance-2" 
           type="text"
           maxlength=35
+          name="finance2"
           placeholder="Monthly average"
         )
         .input-group
