Minor changes in pdf formatting

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
     meta(
       content="width=device-width, initial-scale=1"
       name="viewport"
+      charset="utf-8"
       )
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
