--- a/views/mental.pug
+++ b/views/mental.pug
@@ -33,7 +33,7 @@
         )
 
         .input-group
-        span#mental-4-sp.input-group-text.col-sm-8 How explosive you are? Assess your ability to control emotions?
+        span#mental-4-sp.input-group-text.col-sm-8 Assess your ability to control emotions (how explosive you are, etc)
         input#mental-4.form-control(
           aria-describedby="mental-4" 
           type="number"
